tests/typechecking/valid/simple_if_then_else1.ml
if true then
  print_int 42
else
  print_int 43
