tests/typechecking/invalid/bad_if.ml
if true then 2 else 42.2
